--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,8 @@ body{
 }
 .content{
     width: auto;
-    //height: 1200px;
-    height: 475px;
-    background-color: #ffffff;
+    height: 600px;
+    //background-color: #ffffff;
     margin: auto auto;
     margin-top: 1%;
     margin-bottom: 1%;
@@ -71,7 +70,7 @@ body{
     border-radius: 10px;
     text-align: center;
     padding: 5px;
-    background-color: #CCC;
+    background-color: #DCDCDC;
 }
 .topousuario{
     float: right;
@@ -82,7 +81,7 @@ body{
 .main{
     width: auto;
     height: auto;
-    background-color: #ffffff;
+    //background-color: #ffffff;
     padding-top: 2%;
     padding-bottom: 2%;
 }
